--- a/App/Resources/Info.plist
+++ b/App/Resources/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>$(PRODUCT_NAME)</string>
+	<string>Fietsknelpunt</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -22,8 +22,21 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>FietsknelpuntenAppID</key>
+	<string>be.fietsknelpunten.Fietsknelpunten</string>
+	<key>FietsknelpuntenBaseURL</key>
+	<string>http://localhost/~lieven/fietsknelpunten-platform/</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsLocalNetworking</key>
+		<true/>
+	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Take photos of a problem to report.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Display location on map.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -36,14 +49,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>FietsknelpuntenBaseURL</key>
-	<string>http://localhost/~lieven/fietsknelpunten-platform/</string>
-	<key>FietsknelpuntenAppID</key>
-	<string>be.fietsknelpunten.Fietsknelpunten</string>
-	<key>NSAppTransportSecurity</key>
-	<dict>
-		<key>NSAllowsLocalNetworking</key>
-		<true/>
-	</dict>
 </dict>
 </plist>
