--- a/App/Resources/Info.plist
+++ b/App/Resources/Info.plist
@@ -34,9 +34,11 @@
 		<true/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>Take photos of a problem to report.</string>
+	<string>Take a photo to report a problem.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Display location on map.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Use existing photos to report a problem.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
