--- a/App/Resources/Info.plist
+++ b/App/Resources/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>be.fietsknelpunten.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -25,7 +25,7 @@
 	<key>FietsknelpuntenAppID</key>
 	<string>be.fietsknelpunten.Fietsknelpunten</string>
 	<key>FietsknelpuntenBaseURL</key>
-	<string>http://localhost/~lieven/fietsknelpunten-platform/</string>
+	<string>http://localhost:8080</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
